# deepl-scraper-playwright

./: .env.sample  .flake8  .gitignore  .ruff.toml  README.md  package.json  pylintrc  pyproject.toml  pyrightconfig.json
.github/workflows/: routine-tests.yml
deepl_scraper_pw/: __init__.py  __main__.py  deepl_scraper_pw.py  deepl_tr.py
tests/: test_deepl_scraper_pw.py  test_simple.py  test_version.py
